# aiehlc

./: .gitignore  CMakeLists.txt  README.md  license.txt
doc/: build.md
doc/diagram/: architecture.drawio
example/ir_examples/: multiple_kernel.mlir
example/matrixmultiply/: aieml_mm.cc
example/multi/: multi_kernel.cc  multi_tile.cpp  seq_full_col.cpp  vek385_verification.cpp
example/nokernelload/: aie_nokernelload.cc
example/other/: aie-driver-host-kernel.c  aie-gemm.c  aieml_apu.cc  aieoob.c
example/perf/: aieml_perf.cc
include/: gcommon.h
include/llvm/: aie_compat.h
script/: aiehlc.sh  bspsetup.sh  docker.sh  gen_bsp.py  setup.sh
script/llvm/: build.sh
src/llvm/: aiehlc.cc
src/mlir/: Readme.md  common.h
src/mlir/Parser/: MLIRLoadKernel.g4  MLIRLoadKernel.interp  MLIRLoadKernel.tokens  MLIRLoadKernelLexer.interp  build.sh
src/mlir/mlirfront/: AieDialect.cc  AieDialect.h  AieFrontEnd.cc  AieFrontEnd.h  AieFrontEndTest.cc  AieLinkDialect.cpp  AieLinkDialect.h  CMakeLists.txt  Readme.md  aieops.td  aietypes.td  gen.sh
src/mlir/mlirfront/mlir_files/: kernelObj_test.mlir  kernel_wrapper.mlir  loadkernel_test.mlir  tilekernelObj_test.mlir  window_test.mlir
src/mlir/mlirfront/mlirlinkrelocate/: aielinkops.td  aielinktypes.td  gen.sh
src/mlir/mlirfront/mlirpass/: aiehybrid.cc  aiehybrid.h
src/mlir/mlirfront/tilinglinalg/: tiling.py  tilinglinalg.cpp  tilinglinalg.h  tilingpass.cpp  tilingpass.h
src/mlir/mlirfront/tilinglinalg/pass/: routingconstantfold.cpp  routingconstantfold.h  routingdeadargclean.cpp  routingdeadargclean.h  routinghwlower.cpp  routinghwlower.h  routinglower.cpp  routinglower.h  routingunrolling.cpp  routingunrolling.h
src/mlir/mlirfront/tilinglinalg/pass/routingimplement/hw/: CMakeLists.txt  ResourceManager.cpp  hwresource.cpp
src/mlir/mlirfront/tilinglinalg/pass/routingimplement/hw/unitest/: CMakeLists.txt  test.cpp
src/mlir/mlirfront/tilinglinalg/pass/routingimplement/include/hw/: ResourceManager.h  hwresource.h
src/mlir/mlirfront/tilinglinalg/pass/routingimplement/include/routing/: routingpath.h  routingtopology.h
src/mlir/mlirfront/tilinglinalg/pass/routingimplement/routing/: CMakeLists.txt  routingcontruct.cpp  routingcontruct.h  routingpath.cpp  routingtile.h  routingtopology.cpp
src/mlir/mlirfront/tilinglinalg/pass/routingimplement/routing/unitest/: CMakeLists.txt  test.cpp
src/mlir/mlirfront/tilinglinalg/pass/unitest/: CMakeLists.txt  test.cpp
src/mlir/mlirfront/tilinglinalg/pass/unitest/data/: emitc.ll  emitc2.ll  emitc3.ll
src/mlir/mlirfront/tilinglinalg/routing/: gen.sh  routingmanager.cpp  routingmanager.h
src/mlir/mlirfront/tilinglinalg/routing/td/: routingattr.td  routinginterface.td  routingop.td  routingtype.td
src/mlir/mlirfront/tilinglinalg/routing/unitest/: CMakeLists.txt  test.cpp
src/mlir/mlirfront/tilinglinalg/routinghw/: gen.sh  routinghwmanager.cpp  routinghwmanager.h
src/mlir/mlirfront/tilinglinalg/routinghw/inc/: README.md
src/mlir/mlirfront/tilinglinalg/routinghw/td/: routinghwattr.td  routinghwop.td  routinghwtype.td
src/mlir/mlirfront/tilinglinalg/routinghw/unitest/: CMakeLists.txt  test.cpp
src/mlir/test/: AieDialect.cc  AieDialect.h  AieFrontEnd.cc  CMakeLists.txt  aiedialect.cc.inc  aiedialect.h.inc  aieop.cc.inc  aieop.h.inc  gen.sh  mdialect.td
src/mlir/unittest/tablegen/: gen.sh  test.cpp  test.h
src/mlir/unittest/tablegen/inc/: readme.md
src/mlir/unittest/tablegen/td/: t2.td  testattr.td  testinterface.td  testop.td  testtype.td
src/preprocess/: preporcess.py
tutorial/: example.cpp  tutorial.md
tutorial/bootbin/: allgmiorpu.pdi  bootgen.bif  build.sh
tutorial/hw/: vck190.pdi  vek280.pdi  vek385.pdi
